# guitar-pal

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.streamlit/: config.toml
docs/ai/: context.md  roadmap.md
docs/ai/env/: windows.md
docs/ai/plans/: 001-mvp-upload-analyze-view.md
src/guitar_pal/: __init__.py  app.py  audio.py
tests/: __init__.py  audio_fixtures.py  test_app.py  test_audio.py
