[project]
name = "guitar-pal"
version = "0.1.0"
description = "A small local app for exploring recorded guitar audio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.3",
    "streamlit>=1.57.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
